--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "clean": "rimraf .next",
-    "build": "npm run clean && next build",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
